2004-05-27  Ethan Merritt  <merritt@u.washington.edu>

	* src/gplt_x11.c (PaletteSetColor): Test for overflow of index
	derived from color ramp calculation. Is this algorithm really correct?
	
2004-05-27  Petr Mikulik  <mikulik@physics.muni.cz>

	* term/post.trm (PS_make_header): Change definition of /pm3dround to fix
	color mapping with 'set palette maxcolors'.

	* src/win/wgraph.c (drawgraph): Change call from rgb255_from_gray() to
	rgb255maxcolors_from_gray(). Fixes color mapping with 'set palette
	maxcolors'.

2004-05-26  Ethan Merritt  <merritt@u.washington.edu>

	* src/gplt_x11.c (PaletteSetColor): Fix off-by-one error in indexing
	color ramp of gray values.

	* src/mouse.c (do_event): Allow font and terminal size information to
	be processed while in multiplot mode. See bug #955081.

2004-05-26  Petr Mikulik  <mikulik@physics.muni.cz>

	* src/getcolor.h src/getcolor.c: New routines rgb1maxcolors_from_gray()
	and rgb255maxcolors_from_gray().

	* term/aquaterm.trm (AQUA_set_color) term/pdf.trm (PDF_set_color):
	Change call from rgb1_from_gray() to rgb1maxcolors_from_gray(). Fixes
	color mapping with 'set palette maxcolors'.

	* svg.trm (SVG_set_color): Change call from rgb255_from_gray() to
	rgb255maxcolors_from_gray(). Fixes color mapping with 'set palette
	maxcolors'.

2004-05-26  Petr Mikulik  <mikulik@physics.muni.cz>

	* src/mouse.c (event_buttonpress): Don't start zooming box if replot is
	disabled.

2004-05-24  Ethan Merritt  <merritt@u.washington.edu>

	* src/gplt_x11.c (exec_cmd): Flush polyline to X-server when it reaches
	half the maximum single request size supported on the current display.

	* term/dumb.trm term/gd.trm term/pfg.trm term/x11.trm: The enhanced text
	overprint parameter was used as an (int) in some drivers, even though it
	is declared as a TBOOLEAN.  Change it to (int) everywhere.

2004-05-24  Petr Mikulik  <mikulik@physics.muni.cz>

	* src/pm3d.c src/term.c term/hpljii.trm: SF bug #953887 non-portable C